Searches works, light styling added

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,25 @@
+body {
+  background: midnightblue;
+}
 main {
-  
+  text-align: center;
+}
+h1 {
+  text-align: center;
+}
+.random {
+  margin-bottom: 50px;
+}
+li {
+  display:inline-block;
+  margin: 10px;
+}
+img {
+  height: auto;
+  width: 300px;
+  border: 1px solid white;
+}
+.randomGif {
+  display: block;
+  margin: 10px auto;
 }
