--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Giphy API Practice</title>
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="scripts/client.js"></script>
+    <script src="scripts/main.controller.js"></script>
+    <script src="scripts/giphy.service.js"></script>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
 
@@ -13,16 +14,16 @@
     <h1>Fun with Giphy</h1>
     <main>
       <div class="random">
-        <img ng-src="{{main.random}}" alt="random GIF" />
-        <button class="randomGif" ng-click="main.randomGiphy()">Get Random Giphy</button>
+        <img class="randomImage" ng-src="{{main.random}}" alt="random GIF" />
+        <button class="randomButton" ng-click="main.randomGiphy()">Get Random Giphy</button>
       </div>
 
       <form>
         <input type="text" ng-model="main.search">
-        <button type="submit" ng-click="main.searchGiphy()">Search the Giphy</button>
+        <button class="searchButton" type="submit" ng-click="main.searchGiphy()">Search the Giphy</button>
       </form>
       <ul>
-        <li ng-repeat="image in main.searchImages" alt="search result image"><img ng-src="{{image.images.original.url}}" /></li>
+        <li ng-repeat="image in main.searchImages" alt="search result image"><img class="searchImage" ng-src="{{image.images.original.url}}" /></li>
       </ul>
           </main>
 
