--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <form>
-        <input type="text" ng-model="main.search" placeholder="Search for...">
+        <input type="text" ng-model="main.search" placeholder="Search...">
         <label for="number">Show: </label>
         <input id="number" type="number" ng-model="searches" ng-init="searches=10" value="10" min="3" max="25" ng-model="main.results" />
         <button class="searchButton" type="submit" ng-click="main.searchGiphy()">Search the Giphy</button>
