--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Giphy API Practice</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <script src="scripts/client.js"></script>
+    <script src="scripts/module.js"></script>
     <script src="scripts/main.controller.js"></script>
     <script src="scripts/giphy.service.js"></script>
     <link rel="stylesheet" href="styles/styles.css" />
