--- a/public/views/index.html
+++ b/public/views/index.html
@@ -22,11 +22,13 @@
         <input type="text" ng-model="main.search" placeholder="Search...">
         <label for="number">Show: </label>
         <input id="number" type="number" ng-model="searches" ng-init="searches=10" value="10" min="3" max="25" ng-model="main.results" />
-        <button class="searchButton" type="submit" ng-click="main.searchGiphy()">Search the Giphy</button>
+        <button class="searchButton" type="submit" ng-click="main.searchGiphy(main.search)">Search the Giphy</button>
       </form>
+
       <ul>
         <li ng-repeat="image in main.searchImages | limitTo: searches" alt="search result image"><a href="{{image.images.original.url}}"><img class="searchImage" ng-src="{{image.images.original.url}}" /></a></li>
       </ul>
+
     </main>
 
 
