--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,12 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Giphy API Practice</title>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="scripts/module.js"></script>
+    <script src="assets/vendors/jquery.min.js"></script>
     <script src="scripts/main.controller.js"></script>
     <script src="scripts/giphy.service.js"></script>
+
+    <link rel="stylesheet" href="assets/vendors/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <base href="/" />
+
   </head>
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <h1 class="title">The Great Gif Collection</h1>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/home">Home</a></li>
+        <li><a href="/favorites">Favorites</a><span> Total: </span></li>
+        <li><input type="text"/></li>
+      </ul>
+    </div>
+  </nav>
 
   <body ng-app="giphyGetter" ng-controller="MainController as main">
     <h1>Fun with Giphy</h1>
@@ -26,7 +46,7 @@
       </form>
 
       <ul>
-        <li ng-repeat="image in main.searchImages | limitTo: searches" alt="search result image"><a href="{{image.images.original.url}}"><img class="searchImage" ng-src="{{image.images.original.url}}" /></a></li>
+        <li ng-repeat="image in main.searchImages | limitTo: searches" alt="search result image"><a href="{{image.images.original.url}}"><img ng-class="highlightClass" class="searchImage" ng-src="{{image.images.original.url}}" /></a></li>
       </ul>
 
     </main>
