--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Giphy API Practice</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="assets/vendors/angular.min.js"></script>
+    <script src="assets/vendors/angular-route.min.js"></script>
     <script src="scripts/module.js"></script>
     <script src="assets/vendors/jquery.min.js"></script>
     <script src="scripts/main.controller.js"></script>
