--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,6 +16,7 @@ nav {
   margin: 10px;
   position: relative;
   top: -10px;
+  padding: 0 10px;
 }
 .searchBar {
   display: inline-block;
@@ -34,6 +35,7 @@ input {
   margin-left: 40px;
   position: relative;
   top: -10px;
+  padding: 0 10px;
 }
 h3 {
   color: silver;
