--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,4 +1,6 @@
-<h2>Search Results</h2>
+<h2>Random Giphy Results</h2>
+<img ng-src="{{main.random}}" />
+
 
 <ul>
   <li ng-repeat="image in main.searchImages | limitTo: searches" alt="search result image"><a href="{{image.images.original.url}}"><img ng-class="highlightClass" class="searchImage" ng-src="{{image.images.original.url}}" /></a></li>
