--- a/public/views/random.html
+++ b/public/views/random.html
@@ -1,6 +1,2 @@
-
-<h3>This Random Page Works!</h3>
-<!-- <div class="random">
-  <a href="{{main.random}}"><img class="randomImage" ng-src="{{main.random}}" alt="random GIF" /></a>
-  <button class="randomButton" ng-click="main.randomGiphy()">Get Random Giphy</button>
-</div> -->
+<h2>Random Giphy Results</h2>
+<img ng-src="{{main.random}}" />
