--- a/public/views/index.html
+++ b/public/views/index.html
@@ -27,7 +27,7 @@
 
         <div class="searchBar">
           <form>
-            <input ng-model="main.search" name="searchImage" type="text" placeholder="Search..."/>
+            <input class="searchInput" ng-model="main.search" name="searchImage" type="text" placeholder="Search..."/>
             <a href="/main"><button class="searchButton" ng-click="main.searchGiphy(main.search)">Submit</button></a>
           </form>
           <a href="/random"><button id="randomButton" ng-click="main.randomGiphy()">Get a Random Gif</button></a>
