--- a/public/views/index.html
+++ b/public/views/index.html
@@ -41,5 +41,10 @@
       <h2>Does this show?</h2>
     </main>
 
+    <footer>
+      <p>There is no need to put a footer here, but all good websites have one.</p>
+      <p>Usually, there is useful content or links.  No such luck here.  Sorry!</p>
+    </footer>
+
   </body>
 </html>
