need to hook up post request

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -12,6 +12,7 @@
     <script src="scripts/giphy.config.js"></script>
     <script src="scripts/main.controller.js"></script>
     <script src="scripts/giphy.service.js"></script>
+    <script src="scripts/favorite.service.js"></script>
 
     <link rel="stylesheet" href="assets/vendors/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/styles.css" />
