--- a/public/views/main.html
+++ b/public/views/main.html
@@ -15,14 +15,14 @@
           <input id="comment" type="textarea" placeholder="Add a Comment..."  />
           <span>Category: </span>
           <select>
-            <option></option>
-            <option>Reaction</option>
-            <option>Work-Related</option>
-            <option>Funny</option>
-            <option>Angry</option>
-            <option>Happy</option>
-            <option>Sad</option>
-            <option>Random</option>
+            <option value="">
+            <option value="Reaction">Reaction
+            <option value="Work-Related">Work-Related
+            <option value="Funny">Funny
+            <option value="Angry">Angry
+            <option value="Happy">Happy
+            <option value="Sad">Sad
+            <option value="Random">Random
           </select>
           <button class="formButtons" ng-click="main.resetIndex()">Cancel</button>
           <button class="formButtons" ng-click="main.resetIndex()">Submit</button>
