--- a/public/views/favorites.html
+++ b/public/views/favorites.html
@@ -14,13 +14,17 @@
           <span>Category: </span>
           <select ng-model="main.updateCategory" required >
             <option value="">
-            <option value="Reaction">Reaction
-            <option value="Work-Related">Work-Related
-            <option value="Funny">Funny
-            <option value="Angry">Angry
-            <option value="Happy">Happy
-            <option value="Sad">Sad
-            <option value="Random">Random
+              <option value="Reaction">Reaction
+              <option value="Work-Related">Work-Related
+              <option value="Funny">Funny
+              <option value="Angry">Angry
+              <option value="Happy">Happy
+              <option value="Sad">Sad
+              <option value="Gross">Gross
+              <option value="OMG">OMG
+              <option value="Awesome">Awesome
+              <option value="Cool">Cool
+              <option value="Random">Random
           </select>
           <button class="formButtons" ng-click="main.resetFavIndex()">Cancel</button>
           <button class="formButtons" ng-click="main.deleteFav($index)">Delete</button>
