--- a/public/views/main.html
+++ b/public/views/main.html
@@ -22,6 +22,10 @@
             <option value="Angry">Angry
             <option value="Happy">Happy
             <option value="Sad">Sad
+            <option value="Gross">Gross
+            <option value="OMG">OMG
+            <option value="Awesome">Awesome
+            <option value="Cool">Cool
             <option value="Random">Random
           </select>
           <button class="formButtons" ng-click="main.resetIndex()">Cancel</button>
