--- a/public/views/random.html
+++ b/public/views/random.html
@@ -15,6 +15,10 @@
         <option value="Angry">Angry
         <option value="Happy">Happy
         <option value="Sad">Sad
+        <option value="Gross">Gross
+        <option value="OMG">OMG
+        <option value="Awesome">Awesome
+        <option value="Cool">Cool
         <option value="Random">Random
       </select>
       <button class="randomFormButtons" ng-click="main.showRandomForm()">Cancel</button>
