--- a/public/views/main.html
+++ b/public/views/main.html
@@ -12,7 +12,7 @@
 
       <div ng-show="$index==main.show">
         <form name="searchForm">
-          <input id="$index" ng-model="main.comment" type="textarea" placeholder="Add a Comment..." required  />
+          <input class="favoritesInput" ng-model="main.comment" type="textarea" placeholder="Add a Comment..." required  />
           <span>Category: </span>
           <select ng-model="main.category" required>
             <option value="">
