--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,7 @@
+body {
+  background: url('/assets/images/chain-link.jpg');
+  background-size: cover;
+}
 main {
   text-align: center;
 }
@@ -79,6 +83,7 @@ li {
 .searchResult, .randomResult {
   margin: 0 auto;
   border: 3px solid gray;
+  background-color: white;
 }
 .addFavoriteButton {
   width: 350px;
